chore: adjust controller to reflect workspace change